# tools

./: .gitignore  .travis.yml  AUTHORS  COPYRIGHT  ChangeLog  Makefile.in  README.md  config.h.in  configure  configure.ac  package_fpm  requirements.txt
.travis/: script
aquilon/: ChangeLog  Makefile.am  aclocal.m4  bootstrap  configure
aquilon/src/: Makefile.am  Makefile.in
aquilon/src/doc/: Makefile.in
aquilon/src/doc/man1/: Makefile.am  Makefile.in  aqnet.1  diffprof.1  getprof.1  git-diffuniq.1  rifle.1  trifle.1
aquilon/src/etc/: Makefile.am  Makefile.in
aquilon/src/tests/: test_diffprof.sh
aquilon/src/tests/diffprof/: diffprof-G-xml.out  diffprof-Gaix-json.out  diffprof-Gaix-xml.out  diffprof-Gx-json.out
aquilon/src/trifle/: trifle.c
grid/update-vo-config/: README.rst  update-vo-config
src/doc/man1/: Makefile.am  Makefile.in  aqc.1  aqs.1  ckey.1  diffprof.1  diffuniq.1  getprof.1  prdiff.1  razor.1  rifle.1  xmlnm.1
src/doc/man5/: Makefile.am  Makefile.in  aqs.tab.5
src/etc/: aqs.tab
src/tests/: Makefile.am  Makefile.in  test_load.sh
src/tests/diffprof/: diffprof-G-json.out  diffprof-Gax-json.out  diffprof-Gax-xml.out  diffprof-Gx-xml.out
src/trifle/: Makefile.am  Makefile.in  trifle.c
update-vo-config/: README.rst  setup.py  update-vo-config  update_vo_config
